fix: Website: Make code blocks scrollable on mobile view
This PR addresses the issue of code blocks not properly wrapping on the website in docs/cli on mobile view, which caused a horizontal scroll bar to appear on the bottom of the screen and the actual code block content overflowing.

As a solution i updated the AsciiDoc to apply a custom CSS class to code blocks and added a CSS rule to make any element with the new class horizontally scrollable, while preserving spacing and line breaks.

--- a/website/public/main.css
+++ b/website/public/main.css
@@ -819,6 +819,14 @@ kbd.keystroke {
   }
 }
 
+/* Scrollable container */
+@media screen and (max-width: 670px) {
+  pre {
+    overflow-x: auto;
+    max-height: 400px;
+  }
+}
+
 /*
  * quick-lint-js finds bugs in JavaScript programs.
  * Copyright (C) 2020  Matthew "strager" Glazar
